# xblocks-core

./: .coveragerc  .gitignore  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  catalog-info.yaml  package-lock.json  package.json  pyproject.toml  setup.py  test_settings.py  tox.ini
.github/workflows/: javascript-tests.yml  pypi-publish.yml  python-tests.yml  release.yml  upgrade-python-requirements.yml
docs/: Makefile  changelog.rst  conf.py  index.rst  internationalization.rst  make.bat  testing.rst  xblocks_core.legacy_utils.rst  xblocks_core.rst
docs/decisions/: 0002-pointer-tags-handling.rst
requirements/: base.in  base.txt  dev.txt  doc.txt  pip-tools.txt  quality.txt  test.txt
src/xblock_annotatable/: __init__.py  block.py
src/xblock_annotatable/.tx/: config
src/xblock_annotatable/tests/: test_annotatable.py
src/xblock_discussion/: __init__.py  apps.py  block.py
src/xblock_discussion/.tx/: config
src/xblock_discussion/assets/: jasmine.common.conf.js  karma.conf.js  package.json  webpack.common.config.js  webpack.dev.config.js  webpack.prod.config.js
src/xblock_discussion/templates/discussion_templates/: _discussion_inline.html  _underscore_templates.html
src/xblock_discussion/tests/: test_discussion.py
src/xblock_html/: __init__.py  block.py
src/xblock_html/.tx/: config
src/xblock_html/tests/: test_html.py
src/xblock_lti/: __init__.py  block.py
src/xblock_lti/.tx/: config
src/xblock_lti/templates/: lti.html
src/xblock_lti/tests/: test_lti20_unit.py  test_lti_unit.py
src/xblock_pdf/: __init__.py  block.py  utils.py
src/xblock_pdf/static/js/: pdf_edit.js
src/xblock_pdf/templates/html/: pdf_edit.html  pdf_view.html
src/xblock_pdf/tests/: test_pdf.py
src/xblock_poll_question/: __init__.py  block.py
src/xblock_poll_question/.tx/: config
src/xblock_poll_question/tests/: test_poll.py
src/xblock_problem/: __init__.py  block.py  markup.py  stringify.py
src/xblock_problem/.tx/: config
src/xblock_problem/assets/: karma.conf.js  package.json  webpack.config.js  webpack.prod.config.js
src/xblock_problem/assets/spec/: display_spec.js
src/xblock_problem/capa/: apps.py  capa_problem.py  checker.py  customrender.py  inputtypes.py  responsetypes.py  util.py  xqueue_interface.py  xqueue_submission.py
src/xblock_problem/capa/safe_exec/: lazymod.py  remote_exec.py  safe_exec.py
src/xblock_problem/capa/tests/: helpers.py  response_xml_factory.py  test_answer_pool.py  test_capa_problem.py  test_correctmap.py  test_customrender.py  test_errors.py  test_hint_functionality.py  test_html_render.py  test_input_templates.py  test_inputtypes.py  test_responsetypes.py  test_shuffle.py  test_targeted_feedback.py  test_util.py  test_xqueue_interface.py  test_xqueue_submission.py
src/xblock_problem/tests/: __init__.py  test_capa_block.py  test_stringify.py
src/xblock_video/: __init__.py  ajax_handler_mixin.py  block.py  bumper_utils.py  cache_utils.py  constants.py  mixin.py  studio_metadata_mixin.py  validation.py  video_handlers.py  video_static_content_utils.py  video_transcripts_utils.py  video_utils.py  video_xfields.py
src/xblock_video/.tx/: config
src/xblock_video/assets/: jasmine.common.conf.js  karma.conf.js  karma.webpack.entry.js  package.json  webpack.common.config.js  webpack.dev.config.js  webpack.prod.config.js
src/xblock_video/assets/css/: video.css
src/xblock_video/templates/: video.html
src/xblock_video/tests/: __init__.py  test_utils.py  test_video.py
src/xblock_video/tests/js/: async_process_spec.js  initialize_spec.js  iterator_spec.js  resizer_spec.js  sjson_spec.js  time_spec.js  video_autoadvance_spec.js  video_bumper_spec.js  video_caption_spec.js  video_control_spec.js  video_events_plugin_spec.js  video_focus_grabber_spec.js  video_player_spec.js  video_poster_spec.js  video_progress_slider_spec.js  video_save_state_plugin_spec.js  video_speed_control_spec.js  video_storage_spec.js
src/xblock_video/tests/spec_helpers/: helper.js  vertical_student_view.js
src/xblock_video/tests/views/: bookmark_button.js  message_banner.js
src/xblock_word_cloud/: __init__.py  block.py
src/xblock_word_cloud/.tx/: config
src/xblock_word_cloud/templates/: word_cloud.html
src/xblock_word_cloud/tests/: test_word_cloud.py
src/xblocks_core/: __init__.py
src/xblocks_core/legacy_utils/: __init__.py  xml_utils.py
xblock_pdf/: __init__.py  pdf.py  utils.py
xblock_pdf/js_tests/: jquery.d.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
xblock_pdf/js_tests/specs/: pdf.spec.ts
xblock_pdf/js_tests/specs/helpers/: loadAsElement.js  (+3 more)
xblock_pdf/static/js/: pdf.js
xblock_pdf/templates/html/: pdf.html
xblock_pdf/tests/: test_pdf.py
xblocks_contrib/: __init__.py
xblocks_contrib/annotatable/: __init__.py  annotatable.py
xblocks_contrib/discussion/: __init__.py  discussion.py
xblocks_contrib/discussion/tests/: test_discussion.py
xblocks_contrib/html/: __init__.py  html.py
xblocks_contrib/html/tests/: test_html.py
xblocks_contrib/legacy_utils/: xml_utils.py
xblocks_contrib/lti/: __init__.py  lti.py  lti_2_util.py
xblocks_contrib/lti/tests/: helpers.py  test_lti20_unit.py  test_lti_unit.py
xblocks_contrib/poll/: __init__.py
xblocks_contrib/poll/tests/: test_poll.py
xblocks_contrib/problem/: __init__.py  capa_block.py  xmlparser.py
xblocks_contrib/problem/assets/: webpack.config.js
xblocks_contrib/problem/capa/: capa_problem.py  checker.py  customrender.py  inputtypes.py  responsetypes.py  xqueue_interface.py
xblocks_contrib/problem/tests/: __init__.py  test_capa_block.py
xblocks_contrib/video/: TESTS.xml  __init__.py  ajax_handler_mixin.py  bumper_utils.py  cache_utils.py  constants.py  mixin.py  studio_metadata_mixin.py  validation.py  video.py  video_handlers.py  video_static_content_utils.py  video_transcripts_utils.py  video_utils.py  video_xfields.py
xblocks_contrib/video/tests/: test_studio_metadata_mixin.py  test_utils.py  test_video.py
xblocks_contrib/word_cloud/: __init__.py  word_cloud.py
xblocks_contrib/word_cloud/tests/: test_word_cloud.py
(+48 files in other folders)
