[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xblocks-contrib"
dynamic = ["version"]
description = "core xblocks"
readme = "README.rst"
license = "AGPL-3.0"
license-files = ["LICENSE.txt"]
authors = [
    { name = "Open edX Project", email = "oscm@openedx.org" }
]
keywords = ["Python", "edx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "chem",
    "defusedxml",
    "django>=4.2",
    "edx-codejail",
    "edx-django-utils",
    "edx-opaque-keys",
    "edx-submissions",
    "edx-toggles",
    "edxval",
    "fs",
    "html5lib",
    "lxml",
    "markupsafe",
    "nh3",
    "numpy",
    "oauthlib",
    "openedx-calc",
    "path",
    "pyparsing",
    "pytz",
    "random2",
    "requests",
    "shapely",
    "simplejson",
    "webob",
    "wrapt",
    "xblock",
]

[project.urls]
Homepage = "https://github.com/openedx/xblocks-contrib"

[project.entry-points."xblock.v1"]
# _extracted suffix is added for testing only.
_annotatable_extracted = "xblocks_contrib:AnnotatableBlock"
_discussion_extracted = "xblocks_contrib:DiscussionXBlock"
_html_extracted = "xblocks_contrib:HtmlBlock"
_lti_extracted = "xblocks_contrib:LTIBlock"
_poll_question_extracted = "xblocks_contrib:PollBlock"
_problem_extracted = "xblocks_contrib:ProblemBlock"
_video_extracted = "xblocks_contrib:VideoBlock"
_word_cloud_extracted = "xblocks_contrib:WordCloudBlock"
# 'Done' XBlocks -- ones that are ready for general use today,
# and have been migrated fully from edx-platform or their original repository.
pdf = "xblock_pdf:PDFBlock"

[project.entry-points."lms.djangoapp"]
xblocks_contrib_problem_capa = "xblocks_contrib.problem.capa.apps:CapaAppConfig"
xblocks_contrib_discussion = "xblocks_contrib.discussion.apps:DiscussionAppConfig"

[project.entry-points."cms.djangoapp"]
xblocks_contrib_problem_capa = "xblocks_contrib.problem.capa.apps:CapaAppConfig"
xblocks_contrib_discussion = "xblocks_contrib.discussion.apps:DiscussionAppConfig"

[dependency-groups]
test-base = [
    "ddt",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "six",
]
# Current default Django version. When adding or retiring a Django version
# from the matrix, update this group and [tool.uv].conflicts accordingly.
test = [
    { include-group = "test-base" },
    "Django>=5.2,<6.0",
]
django42 = [
    { include-group = "test-base" },
    "Django>=4.2,<5.0",
]
quality = [
    { include-group = "test" },
    "ruff",
]
doc = [
    { include-group = "test" },
    "doc8",
    "Sphinx",
    "sphinx-book-theme",
]
ci = [
    "tox",
    "tox-uv",
]
dev = [
    { include-group = "quality" },
    { include-group = "ci" },
    { include-group = "doc" },
]

[tool.setuptools_scm]
version_scheme = "only-version"
local_scheme = "no-local-version"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["xblocks_contrib*", "xblock_pdf*"]
exclude = ["*tests*"]

[tool.setuptools.exclude-package-data]
"*" = ["tests*", "*.tests*", "spec*", "*.spec*"]

[tool.edx_lint]
uv_constraints = [
    # Date: 2026-02-10
    # setuptools >=80.9.0 has breaking tests. More details:
    # https://github.com/openedx/openedx-platform/pull/37991
    # Unpin once the issue is resolved.
    "setuptools<=80.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "DJ",     # flake8-django
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-third-party = ["django", "xblock"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "test_settings"
django_find_project = false
addopts = "--cov xblocks_contrib --cov xblock_pdf --cov-report term-missing --cov-report xml"
norecursedirs = [".*", "docs", "requirements", "site-packages"]

[tool.coverage.run]
branch = true
source = [
    "xblocks_contrib",
    "xblock_pdf",
]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/settings.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.doc8]
# D001 = Line too long
ignore = ["D001"]

[tool.uv]
package = true
# Each entry lists groups with mutually exclusive version requirements so uv
# can produce a single uv.lock with a separate resolution for each.
# Add a new pair whenever you add a legacy-version group to [dependency-groups].
conflicts = [
    [{ group = "test" }, { group = "django42" }],
]
#  DO NOT EDIT constraint-dependencies DIRECTLY.
#  This list is managed by `edx_lint write_uv_constraints`
#  and will be overwritten the next time `make upgrade` is run.
#  - GLOBAL constraints: edit edx_lint/files/common_constraints.txt
#  - REPO-SPECIFIC constraints: edit [tool.edx_lint].uv_constraints in this file
constraint-dependencies = [
    "Django<6.0",
    "elasticsearch<7.14.0",
    "setuptools<=80.9.0",
]

[tool.semantic_release]
# We use SETUPTOOLS_SCM_PRETEND_VERSION to pull the version from python-semantic-release
# instead of from version control because the build step happens before the repo gets tagged.
build_command = "python -m pip install --upgrade build && SETUPTOOLS_SCM_PRETEND_VERSION=$NEW_VERSION python -m build"
